<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layoutDirection="rtl"
  tools:context=".DepositProfitActivity">

  <TextView
    android:id="@+id/lbl_weight_gold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="20dp"
    android:text="@string/lbl_deposit_profit"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <EditText
    android:id="@+id/weight_gold"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:ems="10"
    android:hint="@string/hint_price"
    android:inputType="numberDecimal"
    android:maxLength="17"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/lbl_weight_gold"/>

  <TextView
    android:id="@+id/lbl_gold_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="20dp"
    android:text="@string/lbl_profit_percent"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/weight_gold"/>

  <EditText
    android:id="@+id/gold_price"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:ems="10"
    android:hint="@string/hint_percent"
    android:inputType="numberDecimal"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/lbl_gold_price"/>

  <TextView
    android:id="@+id/lbl_make_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/lbl_deposit_period"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/gold_price"/>

  <EditText
    android:id="@+id/make_price"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:ems="10"
    android:hint="@string/hint_date"
    android:inputType="numberDecimal"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/lbl_make_price"/>

  <TextView
    android:id="@+id/lbl_total_gold_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="32dp"
    android:text="@string/lbl_total_profit"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/make_price"/>

  <TextView
    android:id="@+id/lbl_gram_gold_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:text="@string/lbl_monthly_profit"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/lbl_total_gold_price"/>

  <TextView
    android:id="@+id/lbl_daily_profit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:text="@string/lbl_daily_profit"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/lbl_gram_gold_price"/>

  <TextView
    android:id="@+id/total_profit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="50dp"
    android:text="@string/resault"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/lbl_total_gold_price"/>

  <TextView
    android:id="@+id/monthly_profit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="50dp"
    android:text="@string/resault"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/lbl_gram_gold_price"/>

  <TextView
    android:id="@+id/daily_profit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="50dp"
    android:text="@string/resault"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/lbl_daily_profit"/>

  <Button
    android:id="@+id/btn_calculate"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:background="@drawable/rounded_button"
    android:text="@string/btn_calculate"
    android:textColor="@color/Withe"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btn_delete"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"/>

  <Button
    android:id="@+id/btn_delete"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:background="@drawable/rounded_button"
    android:text="@string/btn_delete"
    android:textColor="@color/Withe"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/btn_calculate"/>
</android.support.constraint.ConstraintLayout>