<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layoutDirection="rtl"
  tools:context=".EstateRentActivity">

  <CheckBox
    android:id="@+id/chk_full_mortgage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="20dp"
    android:text="@string/lbl_chk_full_mortgage"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/lbl_mortagage_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/lbl_mortagage_price"
    app:layout_constraintStart_toStartOf="@+id/chk_full_mortgage"
    app:layout_constraintTop_toBottomOf="@+id/chk_full_mortgage"/>

  <EditText
    android:id="@+id/mortagage_price"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:ems="10"
    android:hint="@string/hint_price"
    android:inputType="numberDecimal"
    android:maxLength="17"
    app:layout_constraintStart_toStartOf="@+id/chk_full_mortgage"
    app:layout_constraintTop_toBottomOf="@+id/lbl_mortagage_price"/>

  <TextView
    android:id="@+id/lbl_rent_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/lbl_rent_price"
    app:layout_constraintStart_toStartOf="@+id/chk_full_mortgage"
    app:layout_constraintTop_toBottomOf="@+id/mortagage_price"/>

  <EditText
    android:id="@+id/rent_price"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:ems="10"
    android:hint="@string/hint_price"
    android:inputType="numberDecimal"
    android:maxLength="17"
    app:layout_constraintStart_toStartOf="@+id/chk_full_mortgage"
    app:layout_constraintTop_toBottomOf="@+id/lbl_rent_price"/>

  <TextView
    android:id="@+id/lbl_vat_percent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/lbl_vat_percent"
    app:layout_constraintStart_toStartOf="@+id/chk_full_mortgage"
    app:layout_constraintTop_toBottomOf="@+id/rent_price"/>

  <EditText
    android:id="@+id/vat_percent"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:ems="10"
    android:hint="@string/hint_percent"
    android:inputType="numberDecimal"
    app:layout_constraintStart_toStartOf="@+id/chk_full_mortgage"
    app:layout_constraintTop_toBottomOf="@+id/lbl_vat_percent"/>

  <TextView
    android:id="@+id/lbl_vat_person"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/lbl_vat_person"
    app:layout_constraintStart_toStartOf="@+id/chk_full_mortgage"
    app:layout_constraintTop_toBottomOf="@+id/vat_percent"/>

  <TextView
    android:id="@+id/vat_person"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="50dp"
    android:text="@string/resault"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/lbl_vat_person"/>

  <TextView
    android:id="@+id/lbl_commission_person"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/lbl_commission_person"
    app:layout_constraintStart_toStartOf="@+id/chk_full_mortgage"
    app:layout_constraintTop_toBottomOf="@+id/lbl_vat_person"/>

  <TextView
    android:id="@+id/commission_person"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="50dp"
    android:text="@string/resault"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/lbl_commission_person"/>

  <TextView
    android:id="@+id/lbl_total_person"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/lbl_total_person"
    app:layout_constraintStart_toStartOf="@+id/chk_full_mortgage"
    app:layout_constraintTop_toBottomOf="@+id/lbl_commission_person"/>

  <TextView
    android:id="@+id/total_person"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="50dp"
    android:text="@string/resault"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/lbl_total_person"/>

  <Button
    android:id="@+id/btn_calculate"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:background="@drawable/rounded_button"
    android:text="@string/btn_calculate"
    android:textColor="@color/Withe"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btn_delete"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"/>

  <Button
    android:id="@+id/btn_delete"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:background="@drawable/rounded_button"
    android:text="@string/btn_delete"
    android:textColor="@color/Withe"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/btn_calculate"/>
</android.support.constraint.ConstraintLayout>