<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layoutDirection="rtl"
  tools:context=".EstateBuyActivity">

  <TextView
    android:id="@+id/lbl_weight_gold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="20dp"
    android:text="@string/lbl_total_transaction"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <EditText
    android:id="@+id/weight_gold"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:ems="10"
    android:hint="@string/hint_price"
    android:inputType="numberDecimal"
    android:maxLength="17"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/lbl_weight_gold"/>

  <TextView
    android:id="@+id/lbl_make_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/lbl_vat_percent"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/weight_gold"/>

  <EditText
    android:id="@+id/make_price"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:ems="10"
    android:hint="@string/hint_percent"
    android:inputType="numberDecimal"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/lbl_make_price"/>

  <TextView
    android:id="@+id/lbl_total_gold_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="38dp"
    android:text="@string/lbl_commission_person"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/make_price"/>

  <TextView
    android:id="@+id/lbl_gram_gold_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:text="@string/lbl_vat_person"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/lbl_total_gold_price"/>

  <TextView
    android:id="@+id/lbl_commission_person"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:text="@string/lbl_total_person"
    app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
    app:layout_constraintTop_toBottomOf="@+id/lbl_gram_gold_price"/>

  <TextView
    android:id="@+id/commission_person"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="50dp"
    android:text="@string/resault"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/lbl_total_gold_price"/>

  <TextView
    android:id="@+id/vat_person"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="50dp"
    android:text="@string/resault"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/lbl_gram_gold_price"/>

  <TextView
    android:id="@+id/commission_total"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="50dp"
    android:text="@string/resault"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@+id/lbl_commission_person"/>

  <Button
    android:id="@+id/btn_calculate"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:background="@drawable/rounded_button"
    android:text="@string/btn_calculate"
    android:textColor="@color/Withe"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btn_delete"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"/>

  <Button
    android:id="@+id/btn_delete"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:background="@drawable/rounded_button"
    android:text="@string/btn_delete"
    android:textColor="@color/Withe"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/btn_calculate"/>

  <ir.adad.client.Banner
    android:id="@+id/banner_ad_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="1dp"
    app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"/>

  <android.support.constraint.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="0dp"
    android:layout_height="8dp"
    android:background="@color/colorPrimaryDark"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

  </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>