<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layoutDirection="rtl"
  tools:context=".LoanActivity">

  <ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@+id/banner_ad_view"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <android.support.constraint.ConstraintLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layoutDirection="rtl"
      tools:context=".LoanActivity">


      <TextView
        android:id="@+id/lbl_weight_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_loan_principal"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

      <EditText
        android:id="@+id/weight_gold"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/hint_price"
        android:inputType="number"
        android:maxLength="17"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
        app:layout_constraintTop_toBottomOf="@+id/lbl_weight_gold"/>

      <TextView
        android:id="@+id/lbl_gold_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_duration_month"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
        app:layout_constraintTop_toBottomOf="@+id/weight_gold"/>

      <EditText
        android:id="@+id/gold_price"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/hint_date"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
        app:layout_constraintTop_toBottomOf="@+id/lbl_gold_price"/>

      <TextView
        android:id="@+id/lbl_make_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_percent_year"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
        app:layout_constraintTop_toBottomOf="@+id/gold_price"/>

      <EditText
        android:id="@+id/make_price"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/hint_percent"
        android:inputType="number|numberDecimal"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
        app:layout_constraintTop_toBottomOf="@+id/lbl_make_price"/>

      <TextView
        android:id="@+id/lbl_total_gold_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_amount_installment"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
        app:layout_constraintTop_toBottomOf="@+id/make_price"/>

      <TextView
        android:id="@+id/lbl_daily_profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_annual_interest_year"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
        app:layout_constraintTop_toBottomOf="@+id/lbl_gram_gold_price"/>

      <TextView
        android:id="@+id/lbl_gram_gold_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_annual_interest_month"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
        app:layout_constraintTop_toBottomOf="@+id/lbl_total_gold_price"/>

      <TextView
        android:id="@+id/lbl_total_refund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_total_refund"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
        app:layout_constraintTop_toBottomOf="@+id/lbl_total_interest"/>

      <TextView
        android:id="@+id/lbl_total_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_total_interest"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/lbl_weight_gold"
        app:layout_constraintTop_toBottomOf="@+id/lbl_daily_profit"/>

      <TextView
        android:id="@+id/amountInstallment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/resault"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/lbl_daily_profit"
        app:layout_constraintTop_toTopOf="@+id/lbl_total_gold_price"/>

      <TextView
        android:id="@+id/annualProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resault"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/amountInstallment"
        app:layout_constraintTop_toTopOf="@+id/lbl_daily_profit"/>

      <TextView
        android:id="@+id/monthlyProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resault"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/amountInstallment"
        app:layout_constraintTop_toTopOf="@+id/lbl_gram_gold_price"/>

      <TextView
        android:id="@+id/totalRefund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resault"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/amountInstallment"
        app:layout_constraintTop_toTopOf="@+id/lbl_total_refund"/>

      <TextView
        android:id="@+id/totalInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resault"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/amountInstallment"
        app:layout_constraintTop_toTopOf="@+id/lbl_total_interest"/>

      <Button
        android:id="@+id/btn_calculate"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_calculate"
        android:textColor="@color/Withe"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_total_refund"/>

      <Button
        android:id="@+id/btn_delete"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_delete"
        android:textColor="@color/Withe"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_calculate"
        app:layout_constraintTop_toTopOf="@+id/btn_calculate"/>
    </android.support.constraint.ConstraintLayout>

  </ScrollView>

  <ir.adad.client.Banner
    android:id="@+id/banner_ad_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="1dp"
    app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"/>

  <android.support.constraint.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="0dp"
    android:layout_height="8dp"
    android:background="@color/colorPrimaryDark"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

  </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>